monticore-generator/src/test/resources/cocos/invalid/A2026/A2026.mc4
package cocos.invalid.A2026;

grammar A2026 {

  a;

  A;

}
